--- a/index.html
+++ b/index.html
@@ -30,13 +30,23 @@
     Each time the game begins, the game will change the value of the crystals.
 </p>
 
-<div id="random-number">Randon Number: </div>
+<h3>Random Number: <span id="random-Number"></span></h3>
+<h2>Wins: <span id="wins"></span></h3>
+<h2>Losses: <span id="losses"></span></h3>
 
-<div class="stat" id="wins">Wins: </div>
 
-<div class="stat" id="losses">Losses: </div>
 
-<div id="total-score">Total Score:</div>
+<div class ="image" id="image1" > </div>
+<div class ="image" id="image2" > </div>
+<div class ="image" id="image3" > </div>
+<div class ="image" id="image4" > </div>
+
+
+<h4>Total Score: <span id="total-score"></span></h4>
+
+    <!-- // linking jquery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+    crossorigin="anonymous"></script>
 
      <!-- link javascript -->
   <script src="assets/javascript/game.js"></script>
