--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 <div class ="image" id="image3" > </div>
 <div class ="image" id="image4" > </div>
 
+<div id="crystals">
+</div>
+
 
 <h4>Total Score: <span id="total-score"></span></h4>
 
